# self-initiated-research-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/agent/: __init__.py  decision.py  planner.py
src/analysis/: clarifier.py  gaps.py
src/llm/: __init__.py  client.py
src/models/: claim.py  session.py  source.py
src/research/: __init__.py  claims.py  extractor.py  ranker.py  search.py
src/ui/: pipeline.py  streamlit_app.py
